--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Great Britain. Army. West India regiment, 1st'
 - !lcc 'UA'
+- GITenberg
 title: The History of the First West India Regiment
 url: http://www.gutenberg.org/ebooks/29984
